<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/liqui.droid"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <liqui.droid.util.ActionBar
        android:id="@+id/actionbar"
        app:title="@string/app_name"
        style="@style/ActionBar" />
    <ScrollView
        android:id="@id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:layout_below="@id/actionbar">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="?attr/info_box">

                <LinearLayout
                    android:id="@+id/ll_lqfb_info"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/et_lqfb_name"
                        android:hint="@string/lqfb_name"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <EditText
                        android:id="@+id/et_lqfb_web_url"
                        android:hint="@string/lqfb_web_url"
                        android:singleLine="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <EditText
                        android:id="@+id/et_lqfb_url"
                        android:hint="@string/lqfb_url"
                        android:singleLine="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <EditText
                        android:id="@+id/et_lqfb_key"
                        android:hint="@string/lqfb_key"
                        android:singleLine="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
            </RelativeLayout>

                    <View
                        android:id="@id/separator"
                        android:layout_width="fill_parent"
                        android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_lqfb_save"
                android:layout_height="40dp"
                android:layout_width="150dp"
                
                android:layout_gravity="center_horizontal"
                android:paddingTop="30dip"
                android:text="@string/bt_lqfb_save" />

                                <View
                        android:id="@id/separator"
                        android:layout_width="fill_parent"
                        android:layout_height="20dp" />

            
        </LinearLayout>
    </ScrollView>
</RelativeLayout>